# agentic-tdd-linter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
docs/workflows/: github-actions.md  refactor.md
src/agentic_tdd_linter/: __init__.py  agent_ran_proof.py  agent_review_artifacts.py  agent_review_manifest.py  agentic_md.py  cli.py  docstrings.py  report.py
temporary_fixtures/: agentic_review_manifest.jsonl
tests/: agentic_review_manifest.jsonl  test_agent_review_artifact.py  test_agent_review_manifest.py  test_agentic_md.py  test_assertion_clarify.py  test_classification.py  test_cli.py  test_docstring_clarity.py  test_docstring_structure.py  test_e2e_review_integrity.py  test_e2e_review_runner.py  test_e2e_review_usage.py  test_generic_wording.py  test_private_function_verification.py  test_requirement_validation.py  test_requirement_verification_formulation.py  test_review_proof_flow.py  test_self_contained_values.py  test_self_lint.py  test_test_levels.py
tests/cli_fixtures/: fail_test_due_to_missing_requirement.py  pass_test.py
tests/helpers/: linter_e2e.py
